// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<VerticalCardWithAction /> by default matches with snapshot 1`] = `
<div
  data-radium={true}
>
  <div
    className="marger__StyledMarger-q3lecu-0 iUgzMH"
  >
    <img
      alt=""
      data-radium={true}
      src="#image"
      style={
        Object {
          "display": "block",
          "width": "100%",
        }
      }
    />
  </div>
  <div
    className="marger__StyledMarger-q3lecu-0 fnnfRJ"
  >
    <div
      data-radium={true}
    >
      <div
        className="marger__StyledMarger-q3lecu-0 knIeYu"
      >
        <h1
          className="k-Title k-Title--senary k-Title--withoutMargin"
          style={
            Object {
              "color": "#222",
              "textAlign": "center",
            }
          }
        >
          Custom title
        </h1>
      </div>
      
    </div>
  </div>
  <div
    className="marger__StyledMarger-q3lecu-0 fmxyxo"
  >
    <button
      className="k-Button k-Button--helium"
      href={null}
      onClick={null}
      tabIndex={null}
      type="button"
    >
      button
    </button>
  </div>
  <style
    dangerouslySetInnerHTML={
      Object {
        "__html": "",
      }
    }
  />
</div>
`;

exports[`<VerticalCardWithAction /> with some props matches with snapshot 1`] = `
<div
  data-radium={true}
>
  <div
    className="marger__StyledMarger-q3lecu-0 iUgzMH"
  >
    <img
      alt="Image alt"
      data-radium={true}
      src="#image"
      style={
        Object {
          "display": "block",
          "width": "100%",
        }
      }
    />
  </div>
  <div
    className="marger__StyledMarger-q3lecu-0 fnnfRJ"
  >
    <div
      data-radium={true}
    >
      <div
        className="marger__StyledMarger-q3lecu-0 krszEY"
      >
        <h1
          className="k-Title k-Title--senary k-Title--withoutMargin"
          style={
            Object {
              "color": "#222",
              "textAlign": "center",
            }
          }
        >
          Custom title
        </h1>
      </div>
      <div
        className="marger__StyledMarger-q3lecu-0 hKnjWo"
      >
        <p
          className="k-Paragraph k-Paragraph--quaternary k-Paragraph--withoutMargin"
          style={
            Object {
              "color": "#222",
              "textAlign": "center",
            }
          }
        >
          Custom text
        </p>
      </div>
    </div>
  </div>
  <div
    className="marger__StyledMarger-q3lecu-0 fmxyxo"
  >
    <button
      className="k-Button k-Button--helium"
      href={null}
      onClick={null}
      tabIndex={null}
      type="button"
    >
      button
    </button>
  </div>
  <style
    dangerouslySetInnerHTML={
      Object {
        "__html": "",
      }
    }
  />
</div>
`;
